--- a/index.html
+++ b/index.html
@@ -65,14 +65,6 @@
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="langMenuButton"  id="availLangs">
             </ul>
           </li>
-          
-          <li class="nav-item ms-md-2">
-            <a class="nav-link" href="#" id="theme-toggle" title="Chuyển đổi theme">
-              <i class="fas fa-moon" id="theme-icon-dark"></i>
-              <i class="fas fa-sun" id="theme-icon-light" style="display: none;"></i>
-            </a>
-          </li>
-          
         </ul>
       </div>
 
@@ -140,7 +132,7 @@
 
               <div class="d-flex justify-content-end">
                 <button type="button" class="btn btn-outline-primary ds-btn mb-3" onclick="show_quick_test_modal()" id="quick-test-btn">
-                  <i class="fas fa-vial" id="quick-test-icon"></i>&nbsp;&nbsp;
+                  <i class="fas fa-vial" id="quick-test-icon"></i>&nbsp;&Dagger;
                   <span id="quick-test-text" class="ds-i18n">Quick Test</span>
                 </button>
               </div>
@@ -223,7 +215,7 @@
             <div class="row">
               <div class="col-lg-12 col-xl-6 py-3">
                 <div class="card">
-                  <h5 class="card-header"><i class="fas fa-code"></i>&nbsp;&nbsp;<span class="ds-i18n">Software</span></h5>
+                  <h5 class="card-header"><i class="fas fa-code"></i>&nbsp;&ds-i18n">Software</span></h5>
                   <div class="card-body">
                     <dl class="row" id="fwinfoextra-fw"></dl>
                   </div>
@@ -287,53 +279,16 @@
   <footer class="fixed-bottom bg-body-tertiary border-top">
     <div class="container">
       <div class="d-flex flex-column flex-sm-row justify-content-between py-3" id="footbody">
-        <p class="mb-0"><a target="_blank" href="https://github.com/dualshock-tools/dualshock-tools.github.io/commits/main/"><span class="ds-i18n">Version</span> 2.19</a> (2025-10-18) - <a href="#" class="ds-i18n" onclick="show_donate_modal();">Support this project</a>&nbsp;<span id="authorMsg"></span></p>
+        <p class="mb-0"><a target="_blank" href="https://github.com/MeoUxHii/Dualsense-Controller/commits/main/"><span class="ds-i18n">Version</span> 2.19</a> (2025-10-18) - <a href="#" class="ds-i18n" onclick="show_donate_modal();">Support this project</a>&nbsp;<span id="authorMsg"></span></p>
 
         <ul class="list-unstyled d-flex mb-0">
-          <li class="ms-3"><a class="link-body-emphasis" href="mailto:ds4@the.al" target="_blank"><svg class="bi" width="24" height="24"><use xlink:href="#mail"/></svg></a></li>
-          <li class="ms-3"><a class="link-body-emphasis" href="https://discord.gg/w2P7Rrs2Yp" target="_blank"><svg class="bi" width="24" height="24"><use xlink:href="#discord"/></svg></a></li>
-          <li class="ms-3"><a class="link-body-emphasis" href="https://github.com/dualshock-tools/" target="_blank"><svg class="bi" width="24" height="24"><use xlink:href="#github"/></svg></a></li>
+          <li class="ms-3"><a class="link-body-emphasis" href="mailto:lmtc1907@gmail.com" target="_blank"><svg class="bi" width="24" height="24"><use xlink:href="#mail"/></svg></a></li>
+          <li class="ms-3"><a class="link-body-emphasis" href="https://discord.gg/vcPguxKf" target="_blank"><svg class="bi" width="24" height="24"><use xlink:href="#discord"/></svg></a></li>
+          <li class="ms-3"><a class="link-body-emphasis" href="https://github.com/MeoUxHii/Dualsense-Controller" target="_blank"><svg class="bi" width="24" height="24"><use xlink:href="#github"/></svg></a></li>
         </ul>
-      </div>
+        </div>
     </div>
   </footer>
-
-<script>
-  (function() {
-    const htmlElement = document.documentElement;
-    const toggleButton = document.getElementById('theme-toggle');
-    const darkIcon = document.getElementById('theme-icon-dark');
-    const lightIcon = document.getElementById('theme-icon-light');
-
-    if (!toggleButton || !darkIcon || !lightIcon) {
-      console.error('Theme toggle elements not found.');
-      return;
-    }
-
-    function updateIcon(theme) {
-      darkIcon.style.display = (theme === 'dark') ? 'none' : 'inline-block';
-      lightIcon.style.display = (theme === 'dark') ? 'inline-block' : 'none';
-    }
-
-    function applyTheme(theme) {
-      htmlElement.setAttribute('data-bs-theme', theme);
-      updateIcon(theme);
-      localStorage.setItem('theme', theme);
-    }
-
-    const savedTheme = localStorage.getItem('theme');
-    const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    const currentTheme = savedTheme ? savedTheme : (systemPrefersDark ? 'dark' : 'light');
-
-    applyTheme(currentTheme);
-
-    toggleButton.addEventListener('click', function(e) {
-      e.preventDefault();
-      const newTheme = htmlElement.getAttribute('data-bs-theme') === 'dark' ? 'light' : 'dark';
-      applyTheme(newTheme);
-    });
-  })();
-</script>
 
 </body>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSXPMDXLLS"></script>
